--- a/zh-CN/documentation/ch01.md
+++ b/zh-CN/documentation/ch01.md
@@ -1,337 +1,71 @@
-::: {.navheader}
-Chapter 1. Introduction
-:::
+# 1 简介
 
-[Prev](index.html) 
+<a id=1.1></a>
 
- 
+## 1.1 SMOKE概要
 
- [Next](ch01s02.html)
+环境社区已经开发了先进的数值空气质量模型（air quality models，AQMs），以了解气象、排放源（人为源和生物源）以及污染物化学和动力学之间的相互作用。来自排放模型和监管清单的排放数据是这些空气质量模型最重要的输入之一。科学家将空气质量模型用于许多目的：用于州和联邦实施计划的制定，用于改进建模方法的研究以及最近的空气质量预测。在所有这些情况下，趋势都是以更精细的网格分辨率，更多的排放源和更多的研究对象（例如臭氧、颗粒物、有毒物质）对更大的区域进行建模。这些需求需要可以高效计算、用户友好且灵活的排放数据处理系统。
 
-------------------------------------------------------------------------
+MCNC环境建模中心（Environmental Modeling Center，EMC）创建了稀疏矩阵运算符内核排放（Sparse Matrix Operator Kernel Emissions，SMOKE）模型系统，以使排放数据处理方法能够集成高性能计算（high-performance-computing，HPC）稀疏矩阵算法。SMOKE系统是对用于城市和区域应用的排放控制决策的可用资源的重要补充。它提供了一种为空气质量模型研究准备专业输入的机制，并使空气质量预测成为可能。北卡罗来纳大学教堂山环境研究所（IE）对SMOKE系统继续发展和完善。
 
-::: {.chapter lang="en"}
-::: {.titlepage}
-<div>
+SMOKE原型发布于1996年，是许多区域空气质量建模应用程序中排放处理的有效工具。1998年和1999年，在EPA的支持下，SMOKE进行了重新设计和改进。第一次SMOKE重新设计的主要目的是支持：（1）使用用户选择的化学机制进行排放处理，详见[第2.11节，化学形态处理](ch02.md#2.11)；（2）用于反应性评估的排放处理（详见[第2.14.3节，创建反应性控制矩阵] (ch02.md#2.14.3)。2002年，SMOKE进行了增强，以支持驱动用于创建道路移动源排放因子的MOBILE6模型，并支持道路和非道路移动源有毒物质清单，并发布了SMOKE v1.5。2003年，发布了SMOKE v2.0，以包括所有有毒物质清单，包括点源和非点源（县级报告的固定源）。2004年发布的SMOKE v2.1包括了BEIS3和MOBILE6.2模型的更新版本，在使用MOBILE6处理道路移动源时可以使用湿度数据，并支持极坐标投影网格。2009年，SMOKE v2.6增强了火灾数据的处理，简化了CAMx和UAM模型的处理，并增加了处理CEM数据的新方法。2.7版对SMOKE进行了增强，以支持处理通过SMOKE系统输出的MOVES（Moter Vehicle Emission Simulator，机动车排放模拟器）排放速率，以对道路上和网络外的移动源进行建模。从4.0版开始，通过支持处理全球网格化排放清单（例如EDGAR），SMOKE得到了增强，作为化学传输模型的输入，以支持半球尺度的建模。
 
-<div>
+SMOKE可以处理标准的气态污染物，例如一氧化碳（CO）、氮氧化物（NOx）、挥发性有机化合物（VOC）、氨（NH3）、二氧化硫（SO2），颗粒物（PM），例如PM2.5和PM10，以及大量有毒污染物，例如汞、镉、苯和甲醛。实际上，SMOKE对于可以处理的污染物的数量或类型没有限制。
 
-[]{#ch_introduction}Chapter 1. Introduction {#chapter-1.-introduction .title}
--------------------------------------------
+SMOKE（或任何排放处理器）的目的是将排放清单数据的分辨率转换为空气质量模型所需的分辨率。排放清单通常提供每个排放源的年度总排放值，或者可能包含平均日排放值。但是，对于每个模型网格单元（甚至可能是模型层）以及每个模型物种，空气质量模型通常需要每小时的排放数据。（有关这些术语的定义，请参见[附录A 术语表](go01.md)）。因此，排放处理涉及通过时间分配、化学形态和空间分配来转换排放清单，以实现空气质量模型的输入要求。
 
-</div>
+<a id=1.2></a>
 
-</div>
-:::
+# 1.2 SMOKE用户
 
-::: {.toc}
-[[1.1. Synopsis of SMOKE](ch01.html#d0e62)]{.section}
+可能的SMOKE用户是需要为以下空气质量模型之一准备排放输入文件的人：
 
-[[1.2. SMOKE Users](ch01s02.html)]{.section}
+- CMAQ
+- CAMX
+- UAM-IV
+- UAM-V
 
-[[1.3. How to Use this Manual](ch01s03.html)]{.section}
-:::
+我们预计典型的SMOKE用户将结合以下经验和需求：
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
+1. 了解排放清单的人员。
+2. 具有UNIX（包括Linux）经验的人员。
+3. 具有很少或没有排放建模背景的人员。
+4. 稍微熟悉基于网格的空气质量模型及其排放输入需求的人员。
+5. 持有排放清单的人，需要处理数据以输入到空气质量模型。
+6. 想要为空气质量模型的研究或监管工作创建排放源输入数据的EPA人员。
+7. 想要为空气质量模型创建排放源输入数据以进行监管工作的州环境人员，包括州实施计划（State Implementation Plans，SIPs）。
+8. 希望使用MOVES和WRF/MM5网格化每小时气象数据生成道路移动源清单的人。
 
-<div>
+与必须同时学习UNIX和SMOKE的用户相比，具有UNIX经验的SMOKE用户可以更轻松地运行SMOKE。这是因为运行SMOKE的标准方法是来自UNIX脚本。
 
-[]{#d0e62}1.1. Synopsis of SMOKE {#synopsis-of-smoke .title style="clear: both"}
---------------------------------
+<a id=1.3></a>
 
-</div>
+# 1.3 如何使用本手册
 
-</div>
-:::
+本文档是SMOKE最完整的参考资料。它可以从[CMAS中心]( http://www.cmascenter.org )以一组HTML页面或PDF文档（包括页码）的形式获得。
 
-The environmental community has developed advanced numerical air quality
-models (AQMs) to understand the interactions among meteorology,
-emissions (both manmade and biogenic), and pollutant chemistry and
-dynamics. Emissions data from emissions models and regulatory
-inventories are one of the most important inputs for these air quality
-models. Scientists use air quality modeling for a number of purposes:
-for state and federal implementation plan development, for research on
-improved modeling methods, and most recently for air quality
-forecasting. In all of these cases, the trend has been to model larger
-regions, at a finer grid resolution, with more emissions sources, and
-for more purposes (e.g., ozone, particulates, toxics). These needs
-require a computationally efficient, user-friendly, and flexible
-emissions data processing system.
+以下是用户对本手册的典型需求，以及可满足这些需求的可用资源。
 
-The MCNC Environmental Modeling Center (EMC) created the Sparse Matrix
-Operator Kernel Emissions (SMOKE) Modeling System to allow emissions
-data processing methods to integrate high-performance-computing (HPC)
-sparse-matrix algorithms. The SMOKE system is a significant addition to
-the available resources for decision-making about emissions controls for
-both urban and regional applications. It provides a mechanism for
-preparing specialized inputs for air quality modeling research, and it
-makes air quality forecasting possible. The SMOKE system continues to
-develop and improve at the University of North Carolina at Chapel Hill's
-Institute for the Environment (IE).
+- **安装SMOKE：**安装说明可在[第12章，下载，安装和编译SMOKE](ch12.md)中找到。要注册和下载SMOKE，请访问[CMAS模型信息交换所]( https://www.cmascenter.org/smoke/ )。
 
-The SMOKE prototype, available since 1996, was an effective tool for
-emissions processing in a number of regional air quality modeling
-applications. In 1998 and 1999, SMOKE was redesigned and improved with
-the support of the U.S. Environmental Protection Agency (EPA). The
-primary purposes of the first SMOKE redesign were support of (1)
-emissions processing with user-selected chemical mechanisms (described
-in more detail in [Section 2.11, "Chemical speciation
-processing"](ch02s11.html "2.11. Chemical speciation processing")) and
-(2) emissions processing for reactivity assessments (described in
-[Section 2.14.3, "Creating the reactivity control
-matrix"](ch02s14s03.html "2.14.3. Creating the reactivity control matrix")).
-In 2002, SMOKE was enhanced to support driving the MOBILE6 model used to
-create on-road mobile emission factors and to support on-road and
-nonroad mobile toxics inventories, resulting in SMOKE v1.5. In 2003,
-SMOKE v2.0 was created to include all toxic inventories, including point
-and nonpoint (stationary sources reported at the county level) sources.
-SMOKE v2.1, released in 2004, included updated versions of the BEIS3 and
-MOBILE6.2 models, the ability to use humidity data when processing
-on-road mobile sources with MOBILE6, and support for polar stereographic
-output grids. In 2009, SMOKE v2.6 enhanced the processing of fire data,
-streamlined the processing for CAMx and UAM models, and added a new
-approach to processing CEM data. Version 2.7, SMOKE was enhanced to
-support processing the MOVES (MOter Vehicle Emission Simulator) emission
-rates output through the SMOKE system to model on-roadway and
-off-network mobile sources. As of version 4.0 SMOKE is enhanced to
-support hemispheric modeling by enabling the processing of global
-gridded emission inventories, such as EDGAR, for input to
-chemistry-tranport models.
+- **编译SMOKE：**[第12.4节，为UNIX编译SMOKE](ch12.md#12.4)提供了有关为CMAS中心支持的默认平台以外的平台编译SMOKE的说明。
 
-SMOKE can process criteria gaseous pollutants such as carbon monoxide
-(CO), nitrogen oxides (NO~x~), volatile organic compounds (VOC), ammonia
-(NH~3~), sulfur dioxide (SO~2~); particulate matter (PM) pollutants such
-as PM 2.5 microns or less (PM~2.5~) and PM less than 10 microns
-(PM~10~); as well as a large array of toxic pollutants, such as mercury,
-cadmium, benzene, and formaldehyde. In fact, SMOKE has no limitation
-regarding the number or types of pollutants it can process.
+- **运行SMOKE测试案例：**[第4.3节，运行SMOKE测试案例](ch04.md#4.3)提供了与SMOKE一同发布的有关测试案例运行的说明。
 
-The purpose of SMOKE (or any emissions processor) is to convert the
-resolution of the emission inventory data to the resolution needed by an
-air quality model. Emission inventories are typically available with an
-annual-total emissions value for each emissions source, or perhaps with
-an average-day emissions value. The AQMs, however, typically require
-emissions data on an hourly basis, for each model grid cell (and perhaps
-model layer), and for each model species. (Refer to [Appendix A.
-Glossary](go01.html "Appendix A. Glossary") for definitions of these
-terms.) Consequently, emissions processing involves transforming an
-emission inventory through temporal allocation, chemical speciation, and
-spatial allocation, to achieve the input requirements of the AQM.
-:::
-:::
+- **设置新的清单、网格、情景等并运行SMOKE：**[第4.4节，如何使用SMOKE](ch04.md#4.4)中说明了用户应如何针对自己的情况设置SMOKE。CMAS中心的[SMOKE课堂培训]( http://www.cmascenter.org/training.cfm )涵盖了这些主题的详细内容。
 
-::: {.navfooter}
+- **准备输入文件：**大多数SMOKE输入文件都是ASCII文件，可以使用数据库程序或其他工具来准备。有关所有输入文件格式的说明，请参见[第8章，SMOKE输入文件](ch08.md)。用户可以从EPA网站，例如[清单和排放因子信息交换所（CHIEF）]( http://www.epa.gov/ttn/chief/ )获得数据输入文件（可能不是SMOKE输入格式）。
+
+- **如何设置运行脚本：**在[第4章，如何使用SMOKE](ch04.md)中，我们介绍了SMOKE脚本以及如何使用它们。设置是通过环境变量分配的，在[第2.2节，分配文件和环境变量](ch02.md#2.2)中对环境变量进行了概述。[第4.2.4节，脚本设置](ch04.md#4.4)中描述了用于控制脚本（而不是程序）的任何设置。在[第5章，SMOKE实用工具](ch05.md)、[第6章，SMOKE核心程序](ch06.md)和[第7章，SMOKE质量控制](ch07.md)中进一步说明了由SMOKE程序评估并直接影响其行为的设置。
+
+- **检查SMOKE是否正常运行：**[第7.5节，质量控制方法](ch07.md#7.5)中包含了有关如何验证SMOKE已正常运行的步骤列表。本章还包括有关运行SMOKE的质量控制（quality assurance，QA）功能的说明，以及配置不同类型的质量控制报告文件（[第7.3节，REPCONFIG输入文件](ch07.md#7.3)）。
+
+- **了解SMOKE正在执行的操作：**[第5章，SMOKE实用工具](ch05.md)、[第6章，SMOKE核心程序](ch06.md)和[第7章，SMOKE质量控制](ch07.md)为每个SMOKE程序提供了有关SMOKE操作的任何可用技术文档。我们一直在努力完善此文档，并可以通过[CMAS中心服务台]( http://www.cmascenter.org/html/help.html )获得建议。
+
+- **提交有关SMOKE的问题报告或疑问：**有关SMOKE和其他Models-3组件的所有问题均应通过[CMAS中心服务台]( http://www.cmascenter.org/html/help.html )提交。
+
+尽管[第11章，源代码和Include文件](ch11.md)中提供了一些信息，但本手册并未提供有关代码本身的大量技术文档。该代码具有广泛的内联文档，以帮助精通Fortran的用户了解其工作原理。我们希望将来我们能够增强[第11章，源代码和Include文件](ch11.md)中的文档，但不确定是否必要，迄今为止也尚未获得此类文档的资源。
 
 ------------------------------------------------------------------------
 
-  --------------------------- -------------------- -----------------------
-  [Prev](index.html)                                  [Next](ch01s02.html)
-  SMOKE v4.7 User's Manual     [Home](index.html)         1.2. SMOKE Users
-  --------------------------- -------------------- -----------------------
-:::
-::: {.navheader}
-1.2. SMOKE Users
-:::
-
-[Prev](ch01.html) 
-
-Chapter 1. Introduction
-
- [Next](ch01s03.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#d0e96}1.2. SMOKE Users {#smoke-users .title style="clear: both"}
---------------------------
-
-</div>
-
-</div>
-:::
-
-Possible SMOKE users are individuals who need to prepare emission input
-files for one of the following air quality models:
-
-::: {.itemizedlist}
--   Community Multiscale Air Quality (CMAQ) modeling system
--   Comprehensive Air Quality Model, with Extensions (CAM~X~)
--   Urban Airshed Model, version 4 (UAM-IV)
--   Urban Airshed Model, Variable grid (UAM-V)
-:::
-
-We anticipate that the typical SMOKE user will have some combination of
-the following experience and needs:
-
-::: {.orderedlist}
-1.  Those knowledgeable about emission inventories.
-2.  Those with UNIX experience (including Linux).
-3.  Those with little or no emissions modeling background.
-4.  Those who are somewhat familiar with grid-based air quality models
-    and their emissions input needs.
-5.  Persons with emission inventories in hand who need to process the
-    data for input to an AQM.
-6.  EPA personnel who want to create emission inputs for research or
-    regulatory efforts with AQMs.
-7.  State environmental personnel who want to create emission inputs to
-    AQMs for regulatory efforts, including State Implementation Plans
-    (SIPs).
-8.  Those wishing to generate an on-road mobile inventory using MOVES
-    and either the Weather Research and Forecasting (WRF) modeling
-    system or the Pennsylvania State University/National Center for
-    Atmospheric Research fifth-generation Mesoscale Model (MM5) gridded,
-    hourly meteorology data.
-:::
-
-SMOKE users who have previous UNIX experience can expect to run SMOKE
-more easily than users who must learn both UNIX and SMOKE. This is
-because the standard way to run SMOKE is from UNIX scripts.
-:::
-
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  -------------------------- -------------------- ------------------------------
-  [Prev](ch01.html)            [Up](ch01.html)              [Next](ch01s03.html)
-  Chapter 1. Introduction     [Home](index.html)     1.3. How to Use this Manual
-  -------------------------- -------------------- ------------------------------
-:::
-::: {.navheader}
-1.3. How to Use this Manual
-:::
-
-[Prev](ch01s02.html) 
-
-Chapter 1. Introduction
-
- [Next](ch02.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#d0e383}1.3. How to Use this Manual {#how-to-use-this-manual .title style="clear: both"}
---------------------------------------
-
-</div>
-
-</div>
-:::
-
-This document is the most complete reference available on SMOKE. It is
-available both as a set of HTML pages and PDF document (including page
-numbers) from the [CMAS center](http://www.cmascenter.org).
-
-Given below are typical activities for which users need this manual, and
-the resources available to meet those needs.
-
-::: {.itemizedlist}
--   [**Install SMOKE:**]{.bold} Installation instructions are available
-    in [Chapter 12, *Downloading, Installing, and Compiling
-    SMOKE*](ch12.html "Chapter 12. Downloading, Installing, and Compiling SMOKE").
-    To register and download SMOKE, visit the [CMAS Model
-    Clearinghouse](http://www.cmascenter.org/html/models.html).
-
--   [**Compile SMOKE:**]{.bold} [Section 12.4, "Compiling SMOKE for
-    UNIX"](ch12s04.html "12.4. Compiling SMOKE for UNIX") provides
-    instructions for compiling SMOKE for platforms other than the
-    default ones supported by the CMAS Center.
-
--   [**Run SMOKE test case:**]{.bold} [Section 4.3, "Running the SMOKE
-    test case"](ch04s03.html "4.3. Running the SMOKE test case")
-    provides instructions for running the test case provided with SMOKE.
-
--   [**Set up and run SMOKE for new inventory, grid, episode,
-    etc.:**]{.bold} [Section 4.4, "How to use
-    SMOKE"](ch04s04.html "4.4. How to use SMOKE") includes instructions
-    on how users can set up SMOKE for their own cases. The [SMOKE
-    classroom training](http://www.cmascenter.org/training.cfm)
-    available through the CMAS Center covers these topics in more
-    detail.
-
--   [**Prepare input files:**]{.bold} Most SMOKE input files are ASCII
-    files that can be prepared using database programs or other tools.
-    Descriptions of all input file formats are found in [Chapter 8,
-    *SMOKE Input Files*](ch08.html "Chapter 8. SMOKE Input Files").
-    Users may obtain input data files (perhaps not in SMOKE input
-    format) from EPA web sites, such as the Clearinghouse for
-    Inventories and Emission Factors (CHIEF) [web
-    site](http://www.epa.gov/ttn/chief/emch/).
-
--   [**Decide how to assign settings in run scripts:**]{.bold} In
-    [Chapter 4, *How to Use
-    SMOKE*](ch04.html "Chapter 4. How to Use SMOKE"), we cover the SMOKE
-    scripts and how to use them. The settings are assigned via
-    environment variables, which are explained in general terms in
-    [Section 2.2, "Assigns file and environment
-    variables"](ch02s02.html "2.2. Assigns file and environment variables").
-    Any settings used to control the scripts (not the programs) are
-    described in [Section 4.2.4, "Script
-    settings"](ch04s02s04.html "4.2.4. Script settings"). The settings
-    that are evaluated by SMOKE programs and directly affect their
-    behavior are further explained in [Chapter 5, *SMOKE Utility
-    Tools*](ch05.html "Chapter 5. SMOKE Utility Tools"), [Chapter 6,
-    *SMOKE Core Programs*](ch06.html "Chapter 6. SMOKE Core Programs"),
-    and [Chapter 7, *SMOKE Quality
-    Assurance*](ch07.html "Chapter 7. SMOKE Quality Assurance").
-
--   [**Check that SMOKE has run properly:**]{.bold} [Section 7.5,
-    "Quality Assurance
-    Methods"](ch07s05.html "7.5. Quality Assurance Methods") includes a
-    list of steps regarding how to verify that SMOKE has run properly.
-    This chapter also includes instructions on running the quality
-    assurance (QA) features of SMOKE and documentation on the reporting
-    control file ([Section 7.3, "`REPCONFIG`{.envar} Input
-    File"](ch07s03.html "7.3. REPCONFIG Input File")) needed for
-    configuring different types of reports for quality assurance.
-
--   [**Understand the operations that SMOKE is performing:**]{.bold} Any
-    available technical documentation regarding SMOKE operations is
-    provided in [Chapter 5, *SMOKE Utility
-    Tools*](ch05.html "Chapter 5. SMOKE Utility Tools"), [Chapter 6,
-    *SMOKE Core Programs*](ch06.html "Chapter 6. SMOKE Core Programs"),
-    and [Chapter 7, *SMOKE Quality
-    Assurance*](ch07.html "Chapter 7. SMOKE Quality Assurance") for each
-    SMOKE program. We are continually working to enhance this
-    documentation and can take suggestions through the CMAS Center Help
-    Desk (see next bullet).
-
--   [**Submit problem reports or questions about SMOKE:**]{.bold} All
-    questions and problems concerning SMOKE and other Models-3
-    components should be submitted through the [CMAS Center Help
-    Desk](http://www.cmascenter.org/html/help.html).
-:::
-
-This manual does not provide substantial technical documentation on the
-code itself, though some information is provided in [Chapter 11, *Source
-Code and Include
-Files*](ch11.html "Chapter 11. Source Code and Include Files"). The code
-does have extensive in-line documentation to assist Fortran-savvy users
-in understanding its workings. We hope that in the future we will be
-able to enhance the documentation in [Chapter 11, *Source Code and
-Include Files*](ch11.html "Chapter 11. Source Code and Include Files"),
-but are unsure of the necessity and have not obtained resources for such
-documentation to date.
-:::
-
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ----------------------- -------------------- ----------------------------
-  [Prev](ch01s02.html)      [Up](ch01.html)               [Next](ch02.html)
-  1.2. SMOKE Users         [Home](index.html)     Chapter 2. SMOKE Concepts
-  ----------------------- -------------------- ----------------------------
-:::
+[返回](README.md)>>>>>[下一章](ch02.md)
