--- a/zh-CN/documentation/ch10.md
+++ b/zh-CN/documentation/ch10.md
@@ -1,60 +1,6 @@
-::: {.navheader}
-Chapter 10. SMOKE Output Files
-:::
+# 10 SMOKE Output Files
 
-[Prev](ch09s15.html) 
-
- 
-
- [Next](ch10s02.html)
-
-------------------------------------------------------------------------
-
-::: {.chapter lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#ch_output_files}Chapter 10. SMOKE Output Files {#chapter-10.-smoke-output-files .title}
---------------------------------------------------
-
-</div>
-
-</div>
-:::
-
-::: {.toc}
-[[10.1. Introduction](ch10.html#sect_output_introduction)]{.section}
-
-[[10.2. **Cntlmat**](ch10s02.html)]{.section}
-
-[[10.3. **Elevpoint**](ch10s03.html)]{.section}
-
-[[10.4. **Mrggrid**](ch10s04.html)]{.section}
-
-[[10.5. **Smkinven**](ch10s05.html)]{.section}
-
-[[10.6. **Smkmerge**](ch10s06.html)]{.section}
-
-[[10.7. **Tmpbeis3**](ch10s07.html)]{.section}
-
-[[10.8. **Tmpbio**](ch10s08.html)]{.section}
-:::
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_output_introduction}10.1. Introduction {#introduction .title style="clear: both"}
------------------------------------------------
-
-</div>
-
-</div>
-:::
+## 10.1 Introduction
 
 An output file is a file that is output from a SMOKE program and not
 used as input to any other SMOKE programs. This include the model-ready
@@ -68,96 +14,34 @@ the SMOKE programs that create the files; the files are listed
 alphabetically within each program section. The order of the programs
 within the chapter is also alphabetical. Please note that some file
 types have multiple file names, one per source category. For example,
-the multiplicative control report file name is `ACREP`{.envar},
-`MCREP`{.envar}, or `PCREP`{.envar}, depending on whether the area,
+the multiplicative control report file name is `ACREP`,
+`MCREP`, or `PCREP`, depending on whether the area,
 mobile, or point source category is being processed by **Cntlmat**. In
 these cases of multiple names for a single file type, the file
 description is listed one time for all output files.
-:::
-:::
 
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ----------------------- -------------------- -----------------------
-  [Prev](ch09s15.html)                            [Next](ch10s02.html)
-  9.15. **Tmpbeis3**       [Home](index.html)        10.2. **Cntlmat**
-  ----------------------- -------------------- -----------------------
-:::
-::: {.navheader}
-10.2. **Cntlmat**
-:::
-
-[Prev](ch10.html) 
-
-Chapter 10. SMOKE Output Files
-
- [Next](ch10s02s02.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_output_cntlmat}10.2. **Cntlmat** {#cntlmat .title style="clear: both"}
------------------------------------------
-
-</div>
-
-</div>
-:::
-
-::: {.toc}
-[[10.2.1. `ACREP`{.envar}, `MCREP`{.envar}, and
-`PCREP`{.envar}](ch10s02.html#sect_output_ampcrep)]{.section}
-
-[[10.2.2. `APROJREP`{.envar}, `MPROJREP`{.envar}, and
-`PPROJREP`{.envar}](ch10s02s02.html)]{.section}
-
-[[10.2.3. `AREACREP`{.envar}, `MREACREP`{.envar}, and
-`PREACREP`{.envar}](ch10s02s03.html)]{.section}
-
-[[10.2.4. `ACSUMREP`{.envar}, `MCSUMREP`{.envar}, and
-`PCSUMREP`{.envar}](ch10s02s04.html)]{.section}
-:::
+## 10.2 Cntlmat
 
 The **Cntlmat** program is responsible for creating the growth and
 control matrices. **Cntlmat** creates the following output files:
 
-::: {.itemizedlist}
--   Multiplicative control report: [Section 10.2.1, "`ACREP`{.envar},
-    `MCREP`{.envar}, and
-    `PCREP`{.envar}"](ch10s02.html#sect_output_ampcrep "10.2.1. ACREP, MCREP, and PCREP")
+-   Multiplicative control report: [Section 10.2.1, "`ACREP`,
+    `MCREP`, and
+    `PCREP`"](ch10s02.html#sect_output_ampcrep "10.2.1. ACREP, MCREP, and PCREP")
 
--   Growth factors report: [Section 10.2.2, "`APROJREP`{.envar},
-    `MPROJREP`{.envar}, and
-    `PPROJREP`{.envar}"](ch10s02s02.html "10.2.2. APROJREP, MPROJREP, and PPROJREP")
+-   Growth factors report: [Section 10.2.2, "`APROJREP`,
+    `MPROJREP`, and
+    `PPROJREP`"](ch10s02s02.html "10.2.2. APROJREP, MPROJREP, and PPROJREP")
 
--   Reactivity controls report: [Section 10.2.3, "`AREACREP`{.envar},
-    `MREACREP`{.envar}, and
-    `PREACREP`{.envar}"](ch10s02s03.html "10.2.3. AREACREP, MREACREP, and PREACREP")
+-   Reactivity controls report: [Section 10.2.3, "`AREACREP`,
+    `MREACREP`, and
+    `PREACREP`"](ch10s02s03.html "10.2.3. AREACREP, MREACREP, and PREACREP")
 
--   Summary of controls report: [Section 10.2.4, "`ACSUMREP`{.envar},
-    `MCSUMREP`{.envar}, and
-    `PCSUMREP`{.envar}"](ch10s02s04.html "10.2.4. ACSUMREP, MCSUMREP, and PCSUMREP")
-:::
+-   Summary of controls report: [Section 10.2.4, "`ACSUMREP`,
+    `MCSUMREP`, and
+    `PCSUMREP`"](ch10s02s04.html "10.2.4. ACSUMREP, MCSUMREP, and PCSUMREP")
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-### []{#sect_output_ampcrep}10.2.1. `ACREP`{.envar}, `MCREP`{.envar}, and `PCREP`{.envar} {#acrep-mcrep-and-pcrep .title}
-
-</div>
-
-</div>
-:::
+### 10.2.1. `ACREP`, `MCREP`, and `PCREP`
 
 Type: ASCII - list-directed
 
@@ -167,16 +51,16 @@ application of the multiplicative control matrix factors. For area and
 mobile sources, the report resolution is by state and SCC code. For
 point sources, the report is by state/county and plant code. The
 individual factors applied (e.g., /ALLOWABLE/ and /CONTROL/ packet
-factors) by source are provided in the `*CSUMREP`{.envar} file described
-in [Section 10.2.4, "`ACSUMREP`{.envar}, `MCSUMREP`{.envar}, and
-`PCSUMREP`{.envar}"](ch10s02s04.html "10.2.4. ACSUMREP, MCSUMREP, and PCSUMREP").
+factors) by source are provided in the `*CSUMREP` file described
+in [Section 10.2.4, "`ACSUMREP`, `MCSUMREP`, and
+`PCSUMREP`"](ch10s02s04.html "10.2.4. ACSUMREP, MCSUMREP, and PCSUMREP").
 
 The file header and output format are similar to what is output by the
 **Smkreport** program (see [Section 7.4, "Reports Created by
 **Smkreport**"](ch07s04.html "7.4. Reports Created by Smkreport"). The
 headers include information about:
 
-::: {.itemizedlist}
+
 -   The source category (area, mobile, or point sources) for the report
 
 -   The base year or projected year of the inventory input file
@@ -189,11 +73,11 @@ headers include information about:
 -   The inventory pollutants controlled by the packets
 
 -   The units
-:::
+
 
 The columns of the report include:
 
-::: {.itemizedlist}
+
 -   State ID (area and mobile); state/county ID (point)
 
 -   SCC (area and mobile); plant (point)
@@ -201,43 +85,11 @@ The columns of the report include:
 -   Input emissions in tons/day for each controlled pollutant
 
 -   Output emissions in tons/day for each controlled pollutant
-:::
-:::
-:::
 
-::: {.navfooter}
 
-------------------------------------------------------------------------
 
-  --------------------------------- -------------------- -------------------------------------------------------------------------
-  [Prev](ch10.html)                   [Up](ch10.html)                                                      [Next](ch10s02s02.html)
-  Chapter 10. SMOKE Output Files     [Home](index.html)     10.2.2. `APROJREP`{.envar}, `MPROJREP`{.envar}, and `PPROJREP`{.envar}
-  --------------------------------- -------------------- -------------------------------------------------------------------------
-:::
-::: {.navheader}
-10.2.2. `APROJREP`{.envar}, `MPROJREP`{.envar}, and `PPROJREP`{.envar}
-:::
+### 10.2.2. `APROJREP`, `MPROJREP`, and `PPROJREP`
 
-[Prev](ch10s02.html) 
-
-10.2. **Cntlmat**
-
- [Next](ch10s02s03.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-### []{#sect_output_ampprojrep}10.2.2. `APROJREP`{.envar}, `MPROJREP`{.envar}, and `PPROJREP`{.envar} {#aprojrep-mprojrep-and-pprojrep .title}
-
-</div>
-
-</div>
-:::
 
 Type: ASCII - list-directed
 
@@ -254,12 +106,12 @@ identifiers such as segment and point.
 The file header and output format are somewhat similar to that output by
 the **Smkreport** program (see [Section 7.4, "Reports Created by
 **Smkreport**"](ch07s04.html "7.4. Reports Created by Smkreport")), but
-less so than the `*CREP`{.envar} file (see [Section 10.2.1,
-"`ACREP`{.envar}, `MCREP`{.envar}, and
-`PCREP`{.envar}"](ch10s02.html#sect_output_ampcrep "10.2.1. ACREP, MCREP, and PCREP")).
+less so than the `*CREP` file (see [Section 10.2.1,
+"`ACREP`, `MCREP`, and
+`PCREP`"](ch10s02.html#sect_output_ampcrep "10.2.1. ACREP, MCREP, and PCREP")).
 The headers include information about:
 
-::: {.itemizedlist}
+
 -   The source category (area, mobile, or point sources) for the report
 
 -   The base year of the inventory
@@ -267,52 +119,18 @@ The headers include information about:
 -   The growth year for the packets being applied
 
 -   The fact that all pollutants receive factors uniformly.
-:::
+
 
 The columns of the report include:
 
-::: {.itemizedlist}
+
 -   State ID (area and mobile); state/county ID (point)
 
 -   SCC (area and mobile); plant (point)
 
 -   Growth factor
-:::
-:::
 
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ----------------------- -------------------- -------------------------------------------------------------------------
-  [Prev](ch10s02.html)     [Up](ch10s02.html)                                                    [Next](ch10s02s03.html)
-  10.2. **Cntlmat**        [Home](index.html)     10.2.3. `AREACREP`{.envar}, `MREACREP`{.envar}, and `PREACREP`{.envar}
-  ----------------------- -------------------- -------------------------------------------------------------------------
-:::
-::: {.navheader}
-10.2.3. `AREACREP`{.envar}, `MREACREP`{.envar}, and `PREACREP`{.envar}
-:::
-
-[Prev](ch10s02s02.html) 
-
-10.2. **Cntlmat**
-
- [Next](ch10s02s04.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-### []{#sect_output_ampreacrep}10.2.3. `AREACREP`{.envar}, `MREACREP`{.envar}, and `PREACREP`{.envar} {#areacrep-mreacrep-and-preacrep .title}
-
-</div>
-
-</div>
-:::
+### 10.2.3. `AREACREP`, `MREACREP`, and `PREACREP`
 
 Type: ASCII - list-directed
 
@@ -320,16 +138,16 @@ Summary: This file contains the report for the reactivity packet applied
 during the **Cntlmat** run. It contains the reactivity packet contents
 applied for any source in the inventory that gets a reactivity control.
 For all sources, the resolution of the report is the source level, as
-described for the `[A|M|P]PROJREP`{.envar} files in [Section 10.2.2,
-"`APROJREP`{.envar}, `MPROJREP`{.envar}, and
-`PPROJREP`{.envar}"](ch10s02s02.html "10.2.2. APROJREP, MPROJREP, and PPROJREP").
+described for the `[A|M|P]PROJREP` files in [Section 10.2.2,
+"`APROJREP`, `MPROJREP`, and
+`PPROJREP`"](ch10s02s02.html "10.2.2. APROJREP, MPROJREP, and PPROJREP").
 
 The file header and output format are the same as that output by the
 **Smkreport** program (see [Section 7.4, "Reports Created by
 **Smkreport**"](ch07s04.html "7.4. Reports Created by Smkreport")). The
 headers in include information about:
 
-::: {.itemizedlist}
+
 -   The source category (area, mobile, or point sources) for the report
 
 -   The base year of the inventory (or the projected year if applicable)
@@ -343,11 +161,11 @@ headers in include information about:
     annual total emissions.
 
 -   The column names and units
-:::
+
 
 The columns in the report include:
 
-::: {.itemizedlist}
+
 -   SMOKE source number
 
 -   State/county code
@@ -365,42 +183,8 @@ The columns in the report include:
 -   Projected-year speciation profile
 
 -   Market penetration rate
-:::
-:::
 
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ------------------------------------------------------------------------- -------------------- -------------------------------------------------------------------------
-  [Prev](ch10s02s02.html)                                                    [Up](ch10s02.html)                                                    [Next](ch10s02s04.html)
-  10.2.2. `APROJREP`{.envar}, `MPROJREP`{.envar}, and `PPROJREP`{.envar}     [Home](index.html)     10.2.4. `ACSUMREP`{.envar}, `MCSUMREP`{.envar}, and `PCSUMREP`{.envar}
-  ------------------------------------------------------------------------- -------------------- -------------------------------------------------------------------------
-:::
-::: {.navheader}
-10.2.4. `ACSUMREP`{.envar}, `MCSUMREP`{.envar}, and `PCSUMREP`{.envar}
-:::
-
-[Prev](ch10s02s03.html) 
-
-10.2. **Cntlmat**
-
- [Next](ch10s03.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-### []{#sect_output_ampcsumrep}10.2.4. `ACSUMREP`{.envar}, `MCSUMREP`{.envar}, and `PCSUMREP`{.envar} {#acsumrep-mcsumrep-and-pcsumrep .title}
-
-</div>
-
-</div>
-:::
+### 10.2.4. `ACSUMREP`, `MCSUMREP`, and `PCSUMREP`
 
 Type: ASCII - list-directed
 
@@ -409,73 +193,21 @@ applied to each source, by source. The structure of this file is not
 amenable for import into a spreadsheet, because all control information
 applied to each source is listed underneath each source (not on the same
 line). There is no header in this file.
-:::
 
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ------------------------------------------------------------------------- -------------------- -----------------------
-  [Prev](ch10s02s03.html)                                                    [Up](ch10s02.html)     [Next](ch10s03.html)
-  10.2.3. `AREACREP`{.envar}, `MREACREP`{.envar}, and `PREACREP`{.envar}     [Home](index.html)      10.3. **Elevpoint**
-  ------------------------------------------------------------------------- -------------------- -----------------------
-:::
-::: {.navheader}
-10.3. **Elevpoint**
-:::
-
-[Prev](ch10s02s04.html) 
-
-Chapter 10. SMOKE Output Files
-
- [Next](ch10s03s02.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_output_elevpoint}10.3. **Elevpoint** {#elevpoint .title style="clear: both"}
----------------------------------------------
-
-</div>
-
-</div>
-:::
-
-::: {.toc}
-[[10.3.1.
-`REPPELV`{.envar}](ch10s03.html#sect_output_reppelv)]{.section}
-
-[[10.3.2. `STACK_GROUPS`{.envar}](ch10s03s02.html)]{.section}
-:::
+## 10.3. **Elevpoint**
 
 The **Elevpoint** program is responsible for selecting the elevated
 sources. **Elevpoint** creates the following output files:
 
-::: {.itemizedlist}
+
 -   Elevated-point-source report: [Section 10.3.1,
-    "`REPPELV`{.envar}"](ch10s03.html#sect_output_reppelv "10.3.1. REPPELV")
+    "`REPPELV`"](ch10s03.html#sect_output_reppelv "10.3.1. REPPELV")
 
 -   Stack groups file: [Section 10.3.2,
-    "`STACK_GROUPS`{.envar}"](ch10s03s02.html "10.3.2. STACK_GROUPS")
-:::
+    "`STACK_GROUPS`"](ch10s03s02.html "10.3.2. STACK_GROUPS")
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
 
-<div>
-
-### []{#sect_output_reppelv}10.3.1. `REPPELV`{.envar} {#reppelv .title}
-
-</div>
-
-</div>
-:::
+### 10.3.1. `REPPELV`
 
 Type: ASCII - list-directed
 
@@ -483,7 +215,7 @@ Summary: This ASCII output file contains the sources and criteria used
 for selecting elevated and PinG sources in SMOKE. The following is a
 description of columns/header in the report:
 
-::: {.itemizedlist}
+
 -   Source ID: SMOKE source ID, used by SMOKE only
 
 -   Region: Country/state/county code (CSSYYY where C=country, SS=state,
@@ -517,19 +249,19 @@ description of columns/header in the report:
 
 -   Rise: Briggs analytical solution plume rise in meters. This column
     is output only when RISE is specified as a selection criterion in
-    the `PELVCONFIG`{.envar} input file.
+    the `PELVCONFIG` input file.
 
 -   Group \<pol\>: Daily maximum emissions for source or source group
-    for each pollutant (\<pol\>) in the `PELVCONFIG`{.envar} file. These
+    for each pollutant (\<pol\>) in the `PELVCONFIG` file. These
     emissions are source emissions when a single source has its own
     group number. This column is output only when a pollutant is
-    specified as a selection criterion in the `PELVCONFIG`{.envar} input
+    specified as a selection criterion in the `PELVCONFIG` input
     file.
 
--   Var 1: The first variable from the `PELVCONFIG`{.envar} input file
+-   Var 1: The first variable from the `PELVCONFIG` input file
     that was used in establishing the source as a PinG/elevated source
 
--   Type 1: If "[TOP]{.quote}" was used in the `PELVCONFIG`{.envar}
+-   Type 1: If "[TOP]{.quote}" was used in the `PELVCONFIG`
     input file, this field says "[RANK]{.quote}"
 
 -   Test 1: The test used to establish this source as a PinG/elevated
@@ -539,200 +271,64 @@ description of columns/header in the report:
     value is the criterion used with Var 1 and Test 1 (e.g., if Var 1 is
     HT, Test 1 is "[\>]{.quote}", and if Val 1 is 50, then the criterion
     for selection is that the stack height be greater than 50.
-:::
+
 
 Var 2 through Val 2 are the same as Var 1 through Val 1, except these
 are defined only if an AND condition existed for the OR condition that
 SMOKE used to establish the source as PinG or elevated. There will be as
 many variables of these types as there are AND conditions in the
 **PELVCONFIG** file.
-:::
-:::
 
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ------------------------------------------------------------------------- -------------------- ---------------------------------
-  [Prev](ch10s02s04.html)                                                     [Up](ch10.html)              [Next](ch10s03s02.html)
-  10.2.4. `ACSUMREP`{.envar}, `MCSUMREP`{.envar}, and `PCSUMREP`{.envar}     [Home](index.html)     10.3.2. `STACK_GROUPS`{.envar}
-  ------------------------------------------------------------------------- -------------------- ---------------------------------
-:::
-::: {.navheader}
-10.3.2. `STACK_GROUPS`{.envar}
-:::
-
-[Prev](ch10s03.html) 
-
-10.3. **Elevpoint**
-
- [Next](ch10s04.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-### []{#sect_output_stack_groups}10.3.2. `STACK_GROUPS`{.envar} {#stack_groups .title}
-
-</div>
-
-</div>
-:::
+### 10.3.2. `STACK_GROUPS`
 
 Type: I/O API NetCDF - adapted gridded format
 
 Summary: I/O API intermediate file and output file for CMAQ. See
 [Section 9.3.2,
-"`STACK_GROUPS`{.envar}"](ch09s03s02.html "9.3.2. STACK_GROUPS") for
+"`STACK_GROUPS`"](ch09s03s02.html "9.3.2. STACK_GROUPS") for
 more information.
-:::
 
-::: {.navfooter}
+## 10.4. **Mrggrid**
 
-------------------------------------------------------------------------
-
-  ----------------------- -------------------- -----------------------
-  [Prev](ch10s03.html)     [Up](ch10s03.html)     [Next](ch10s04.html)
-  10.3. **Elevpoint**      [Home](index.html)        10.4. **Mrggrid**
-  ----------------------- -------------------- -----------------------
-:::
-::: {.navheader}
-10.4. **Mrggrid**
-:::
-
-[Prev](ch10s03s02.html) 
-
-Chapter 10. SMOKE Output Files
-
- [Next](ch10s05.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_output_mrggrid}10.4. **Mrggrid** {#mrggrid .title style="clear: both"}
------------------------------------------
-
-</div>
-
-</div>
-:::
-
-::: {.toc}
-[[10.4.1.
-`OUTFILE`{.envar}](ch10s04.html#sect_output_outfile)]{.section}
-:::
 
 The **Mrggrid** program is responsible for creating model-ready
 emissions files. **Mrggrid** creates the following output file:
 
-::: {.itemizedlist}
+
 -   Model-ready emissions file: [Section 10.4.1,
-    "`OUTFILE`{.envar}"](ch10s04.html#sect_output_outfile "10.4.1. OUTFILE")
-:::
+    "`OUTFILE`"](ch10s04.html#sect_output_outfile "10.4.1. OUTFILE")
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
 
-<div>
-
-### []{#sect_output_outfile}10.4.1. `OUTFILE`{.envar} {#outfile .title}
-
-</div>
-
-</div>
-:::
+### 10.4.1. `OUTFILE` 
 
 Type: I/O API NetCDF - adapted gridded format
 
 Summary: Final, model-ready file created from two or more souce
 categories. See [Section 10.6,
 "**Smkmerge**"](ch10s06.html "10.6. Smkmerge") for file format.
-:::
-:::
 
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  --------------------------------- -------------------- -----------------------
-  [Prev](ch10s03s02.html)             [Up](ch10.html)       [Next](ch10s05.html)
-  10.3.2. `STACK_GROUPS`{.envar}     [Home](index.html)       10.5. **Smkinven**
-  --------------------------------- -------------------- -----------------------
-:::
-::: {.navheader}
-10.5. **Smkinven**
-:::
-
-[Prev](ch10s04.html) 
-
-Chapter 10. SMOKE Output Files
-
- [Next](ch10s05s02.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_output_smkinven}10.5. **Smkinven** {#smkinven .title style="clear: both"}
--------------------------------------------
-
-</div>
-
-</div>
-:::
-
-::: {.toc}
-[[10.5.1.
-`REPINVEN`{.envar}](ch10s05.html#sect_output_repinven)]{.section}
-
-[[10.5.2. `ASCC`{.envar}, `MSCC`{.envar},
-`PSCC`{.envar}](ch10s05s02.html)]{.section}
-:::
+## 10.5. **Smkinven**
 
 The **Smkinven** program is responsible for importing the raw inventory
 into SMOKE format. **Smkinven** creates the following output files:
 
-::: {.itemizedlist}
+
 -   Inventory import report: [Section 10.5.1,
-    "`REPINVEN`{.envar}"](ch10s05.html#sect_output_repinven "10.5.1. REPINVEN")
+    "`REPINVEN`"](ch10s05.html#sect_output_repinven "10.5.1. REPINVEN")
 
--   SCC file: [Section 10.5.2, "`ASCC`{.envar}, `MSCC`{.envar},
-    `PSCC`{.envar}"](ch10s05s02.html "10.5.2. ASCC, MSCC, PSCC")
-:::
+-   SCC file: [Section 10.5.2, "`ASCC`, `MSCC`,
+    `PSCC`"](ch10s05s02.html "10.5.2. ASCC, MSCC, PSCC")
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
 
-<div>
 
-### []{#sect_output_repinven}10.5.1. `REPINVEN`{.envar} {#repinven .title}
-
-</div>
-
-</div>
-:::
+### 10.5.1. `REPINVEN`
 
 Type: ASCII - list-directed
 
 Summary: This report is made up of several different sections describing
 different parts of the inventory import.
 
-::: {.orderedlist}
+ {.orderedlist}
 1.  This section lists, by CAS number, the emissions in tons/year; the
     number of inventory records; whether all, some, or none of the
     pollutants associated with that CAS number were kept; and the CAS
@@ -740,7 +336,7 @@ different parts of the inventory import.
 
     The columns in the report include:
 
-    ::: {.itemizedlist}
+    
     -   CAS number
 
     -   Whether all, some, or none of the pollutants were kept
@@ -750,17 +346,17 @@ different parts of the inventory import.
     -   Emissions for the CAS number
 
     -   CAS number description
-    :::
+    
 
 2.  This section includes emissions before and after application of
-    disaggregation factors from the `INVTABLE`{.envar}. Only the
-    pollutants that have Keep = Y in `INVTABLE`{.envar} will be included
+    disaggregation factors from the `INVTABLE`. Only the
+    pollutants that have Keep = Y in `INVTABLE` will be included
     in this report. This report will be provided only if disaggregation
     and/or aggregation have occurred.
 
     The columns in the report include:
 
-    ::: {.itemizedlist}
+    
     -   "[Kept]{.quote}" unique CAS number
 
     -   Emissions total for the CAS number
@@ -774,20 +370,20 @@ different parts of the inventory import.
     -   Pollutant description
 
     -   CAS number description
-    :::
-:::
+    
+
 
 The following sections are only for area-to-point assignments:
 
-::: {.orderedlist}
+ {.orderedlist}
 3.  This section lists SCCs that have area-to-point source factor file
     assignments but are not in the inventory.
 
     The columns in the report include:
 
-    ::: {.itemizedlist}
+    
     -   Assigned SCC codes not in the inventory
-    :::
+    
 
 4.  For emissions going to point sources, this section lists the
     pollutant name, emissions total before and after the factors are
@@ -795,7 +391,7 @@ The following sections are only for area-to-point assignments:
 
     The columns in the report include:
 
-    ::: {.itemizedlist}
+    
     -   SCC code
 
     -   Pollutant name
@@ -807,13 +403,13 @@ The following sections are only for area-to-point assignments:
     -   Emissions after factors are applied
 
     -   SCC description
-    :::
+    
 
 5.  Same as the above section, except emissions are reported by state.
 
     The columns in the report include:
 
-    ::: {.itemizedlist}
+    
     -   State
 
     -   SCC code
@@ -827,7 +423,7 @@ The following sections are only for area-to-point assignments:
     -   Emissions after factors are applied
 
     -   SCC description
-    :::
+    
 
 6.  This section lists, by SCC, the number of state and county FIPS
     codes getting assigned to point locations and the number not getting
@@ -835,7 +431,7 @@ The following sections are only for area-to-point assignments:
 
     The columns in the report include:
 
-    ::: {.itemizedlist}
+    
     -   SCC code
 
     -   Number of FIPS assigned to point locations
@@ -843,309 +439,107 @@ The following sections are only for area-to-point assignments:
     -   Number of FIPS not assigned to point locations
 
     -   SCC description
-    :::
-:::
-:::
-:::
-
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ----------------------- -------------------- ---------------------------------------------------------
-  [Prev](ch10s04.html)      [Up](ch10.html)                                      [Next](ch10s05s02.html)
-  10.4. **Mrggrid**        [Home](index.html)     10.5.2. `ASCC`{.envar}, `MSCC`{.envar}, `PSCC`{.envar}
-  ----------------------- -------------------- ---------------------------------------------------------
-:::
-::: {.navheader}
-10.5.2. `ASCC`{.envar}, `MSCC`{.envar}, `PSCC`{.envar}
-:::
-
-[Prev](ch10s05.html) 
-
-10.5. **Smkinven**
-
- [Next](ch10s06.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-### []{#sect_output_ampscc}10.5.2. `ASCC`{.envar}, `MSCC`{.envar}, `PSCC`{.envar} {#ascc-mscc-pscc .title}
-
-</div>
-
-</div>
-:::
+    
+### 10.5.2. `ASCC`, `MSCC`, `PSCC`
 
 Type: ASCII - list-directed
 
 Summary: This file simply lists the SCC codes in the raw inventory.
-:::
 
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ----------------------- -------------------- -----------------------
-  [Prev](ch10s05.html)     [Up](ch10s05.html)     [Next](ch10s06.html)
-  10.5. **Smkinven**       [Home](index.html)       10.6. **Smkmerge**
-  ----------------------- -------------------- -----------------------
-:::
-::: {.navheader}
-10.6. **Smkmerge**
-:::
-
-[Prev](ch10s05s02.html) 
-
-Chapter 10. SMOKE Output Files
-
- [Next](ch10s07.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_output_smkmerge}10.6. **Smkmerge** {#smkmerge .title style="clear: both"}
--------------------------------------------
-
-</div>
-
-</div>
-:::
-
-::: {.toc}
-[[10.6.1.
-`[A|B|M|P|E]G[T][S][3D][_S][_L]`{.envar}](ch10s06.html#sect_output_egts)]{.section}
-:::
+## 10.6. **Smkmerge**
 
 The **Smkmerge** program is responsible for creating model-ready
 emissions files. **Smkmerge** creates the following output file:
 
-::: {.itemizedlist}
+
 -   Model-ready emissions file: [Section 10.6.1,
-    "`[A|B|M|P|E]G[T][S][3D][_S][_L]`{.envar}"](ch10s06.html#sect_output_egts "10.6.1. [A|B|M|P|E]G[T][S][3D][_S][_L]")
-:::
+    "`[A|B|M|P|E]G[T][S][3D][_S][_L]`"](ch10s06.html#sect_output_egts "10.6.1. [A|B|M|P|E]G[T][S][3D][_S][_L]")
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
+### 10.6.1. `[A|B|M|P|E]G[T][S][3D][_S][_L]`
 
-<div>
 
-### []{#sect_output_egts}10.6.1. `[A|B|M|P|E]G[T][S][3D][_S][_L]`{.envar} {#abmpegts3d_s_l .title}
-
-</div>
-
-</div>
-:::
 
 Type: I/O API NetCDF - adapted gridded format
 
-::: {.table}
-[]{#d0e57122}
-
 **Table 10.1. I/O API Header for
-`[A|B|M|P|E]G[T][S][3D][_S][_L]`{.envar}**
+`[A|B|M|P|E]G[T][S][3D][_S][_L]`**
 
   I/O API Header variable   Meaning                         Set by\...
   ------------------------- ------------------------------- ---------------------------------------------------------------
-  NCOLS3D                   Number of columns in the grid   Output grid description in `GRIDDESC`{.envar}
-  NROWS3D                   Number of rows in the grid      Output grid description in `GRIDDESC`{.envar}
-  NVARS3D                   Number of output species        Chemical mechanism and speciation profiles in `GSPRO`{.envar}
-:::
+  NCOLS3D                   Number of columns in the grid   Output grid description in `GRIDDESC`
+  NROWS3D                   Number of rows in the grid      Output grid description in `GRIDDESC`
+  NVARS3D                   Number of output species        Chemical mechanism and speciation profiles in `GSPRO`
 
-::: {.table}
-[]{#d0e57167}
 
-**Table 10.2. Variables in `[A|B|M|P|E]G[T][S][3D][_S][_L]`{.envar}**
+**Table 10.2. Variables in `[A|B|M|P|E]G[T][S][3D][_S][_L]`**
 
   Variable Name             Type   Units                  Description
   ------------------------- ------ ---------------------- -------------------------------
   Name of species 1         Real   \[moles\|tons\]/time   Emissions for species 1
   \...                      \...   \...                   \...
   Name of species NVARS3D   Real   \[moles\|tons\]/time   Emissions for species NVARS3D
-:::
-:::
-:::
 
-::: {.navfooter}
 
-------------------------------------------------------------------------
+## 10.7. **Tmpbeis3**
 
-  --------------------------------------------------------- -------------------- -----------------------
-  [Prev](ch10s05s02.html)                                     [Up](ch10.html)       [Next](ch10s07.html)
-  10.5.2. `ASCC`{.envar}, `MSCC`{.envar}, `PSCC`{.envar}     [Home](index.html)       10.7. **Tmpbeis3**
-  --------------------------------------------------------- -------------------- -----------------------
-:::
-::: {.navheader}
-10.7. **Tmpbeis3**
-:::
-
-[Prev](ch10s06.html) 
-
-Chapter 10. SMOKE Output Files
-
- [Next](ch10s08.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_output_tmpbeis3}10.7. **Tmpbeis3** {#tmpbeis3 .title style="clear: both"}
--------------------------------------------
-
-</div>
-
-</div>
-:::
-
-::: {.toc}
-[[10.7.1. `B3GTS_L`{.envar} and
-`B3GTS_S`{.envar}](ch10s07.html#sect_output_b3gts)]{.section}
-:::
 
 The **Tmpbeis3** program is responsible for creating gridded, hourly
 biogenic emissions. **Tmpbeis3** creates the following output file:
 
-::: {.itemizedlist}
--   Model-ready biogenic emissions: [Section 10.7.1, "`B3GTS_L`{.envar}
+
+-   Model-ready biogenic emissions: [Section 10.7.1, "`B3GTS_L`
     and
-    `B3GTS_S`{.envar}"](ch10s07.html#sect_output_b3gts "10.7.1. B3GTS_L and B3GTS_S")
-:::
+    `B3GTS_S`"](ch10s07.html#sect_output_b3gts "10.7.1. B3GTS_L and B3GTS_S")
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
 
-<div>
-
-### []{#sect_output_b3gts}10.7.1. `B3GTS_L`{.envar} and `B3GTS_S`{.envar} {#b3gts_l-and-b3gts_s .title}
-
-</div>
-
-</div>
-:::
+### 10.7.1. `B3GTS_L` and `B3GTS_S` 
 
 Type: I/O API NetCDF - adapted gridded format
 
-::: {.table}
-[]{#d0e57241}
 
-**Table 10.3. I/O API Header for `B3GTS_L`{.envar} and
-`B3GTS_S`{.envar}**
+**Table 10.3. I/O API Header for `B3GTS_L` and
+`B3GTS_S`**
 
   I/O API Header variable   Meaning                         Set by\...
   ------------------------- ------------------------------- ---------------------------------------------------------------
-  NCOLS3D                   Number of columns in the grid   Output grid description in `GRIDDESC`{.envar}
-  NROWS3D                   Number of rows in the grid      Output grid description in `GRIDDESC`{.envar}
-  NVARS3D                   Number of output species        Chemical mechanism and speciation profiles in `GSPRO`{.envar}
-:::
+  NCOLS3D                   Number of columns in the grid   Output grid description in `GRIDDESC`
+  NROWS3D                   Number of rows in the grid      Output grid description in `GRIDDESC`
+  NVARS3D                   Number of output species        Chemical mechanism and speciation profiles in `GSPRO`
 
-::: {.table}
-[]{#d0e57289}
 
-**Table 10.4. Variables in `B3GTS_L`{.envar} and `B3GTS_S`{.envar}**
+**Table 10.4. Variables in `B3GTS_L` and `B3GTS_S`**
 
   Variable Name             Type   Units                Description
   ------------------------- ------ -------------------- -------------------------------
   Name of species 1         Real   \[moles\|tons\]/hr   Emissions for species 1
   \...                      \...   \...                 \...
   Name of species NVARS3D   Real   \[moles\|tons\]/hr   Emissions for species NVARS3D
-:::
-:::
-:::
 
-::: {.navfooter}
-
-------------------------------------------------------------------------
-
-  ----------------------- -------------------- -----------------------
-  [Prev](ch10s06.html)      [Up](ch10.html)       [Next](ch10s08.html)
-  10.6. **Smkmerge**       [Home](index.html)         10.8. **Tmpbio**
-  ----------------------- -------------------- -----------------------
-:::
-::: {.navheader}
-10.8. **Tmpbio**
-:::
-
-[Prev](ch10s07.html) 
-
-Chapter 10. SMOKE Output Files
-
- [Next](ch11.html)
-
-------------------------------------------------------------------------
-
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
-
-<div>
-
-[]{#sect_output_tmpbio}10.8. **Tmpbio** {#tmpbio .title style="clear: both"}
----------------------------------------
-
-</div>
-
-</div>
-:::
-
-::: {.toc}
-[[10.8.1. `BGTS_L`{.envar} and
-`BGTS_S`{.envar}](ch10s08.html#sect_output_bgts)]{.section}
-:::
+## 10.8. **Tmpbio**
 
 The **Tmpbio** program is responsible for creating gridded, hourly
 biogenic emissions. **Tmpbio** creates the following output file:
 
-::: {.itemizedlist}
--   Model-ready biogenic emissions: [Section 10.8.1, "`BGTS_L`{.envar}
+
+-   Model-ready biogenic emissions: [Section 10.8.1, "`BGTS_L`
     and
-    `BGTS_S`{.envar}"](ch10s08.html#sect_output_bgts "10.8.1. BGTS_L and BGTS_S")
-:::
+    `BGTS_S`"](ch10s08.html#sect_output_bgts "10.8.1. BGTS_L and BGTS_S")
 
-::: {.section lang="en"}
-::: {.titlepage}
-<div>
 
-<div>
 
-### []{#sect_output_bgts}10.8.1. `BGTS_L`{.envar} and `BGTS_S`{.envar} {#bgts_l-and-bgts_s .title}
-
-</div>
-
-</div>
-:::
+###  10.8.1. `BGTS_L` and `BGTS_S`
 
 Type: I/O API NetCDF - adapted gridded format
 
-The `BGTS_L`{.envar} and `BGTS_S`{.envar} files have the same format as
-the `B3GTS_L`{.envar} and `B3GTS_S`{.envar} files, respectively. See
-[Section 10.7.1, "`B3GTS_L`{.envar} and
-`B3GTS_S`{.envar}"](ch10s07.html#sect_output_b3gts "10.7.1. B3GTS_L and B3GTS_S")
+The `BGTS_L` and `BGTS_S` files have the same format as
+the `B3GTS_L` and `B3GTS_S` files, respectively. See
+[Section 10.7.1, "`B3GTS_L` and
+`B3GTS_S`"](ch10s07.html#sect_output_b3gts "10.7.1. B3GTS_L and B3GTS_S")
 for format information.
-:::
-:::
 
-::: {.navfooter}
 
 ------------------------------------------------------------------------
 
-  ----------------------- -------------------- --------------------------------------------
-  [Prev](ch10s07.html)      [Up](ch10.html)                               [Next](ch11.html)
-  10.7. **Tmpbeis3**       [Home](index.html)     Chapter 11. Source Code and Include Files
-  ----------------------- -------------------- --------------------------------------------
-:::
+[前一章](ch09.md)<<<<<[返回](README.md)>>>>>[下一章](ch11.md)
+
+
